fixed some issues with button covering text, but there's still a problem...

--- a/style/style2.css
+++ b/style/style2.css
@@ -79,7 +79,7 @@ a {
 
 #button {
 	/*font-size:0.5em;*/
-	background-color: #ADD8E6;
+	/*background-color: #ADD8E6;*/
 	bottom: 10%;
   left: 0;
   position: fixed;
